--- a/.github/workflows/master_charbelbouabdo.yml
+++ b/.github/workflows/master_charbelbouabdo.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: java-app
+          name: AzureTestProject
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
@@ -43,7 +43,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: java-app
+          name: AzureTestProject
       
       - name: Login to Azure
         uses: azure/login@v1
